Remove opinionated workflow examples
